src/04-Terraform-Variables-and-Datasources/c3-ec2securitygroups.tf
# Create Security Group - SSH Traffic
resource "aws_security_group" "default-vpc-ssh" {
#  如果没有指定vpc_id，会默认创建在默认vpc中
#  vpc_id = ""
  name        = "default-vpc-ssh"
  description = "Dev VPC SSH"
#  inbound rule. Allow port 22 from any ip
  ingress {
    description = "Allow Port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
#  outbound rule. Allow all ip and ports
  egress {
    description = "Allow all ip and ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create Security Group - Web Traffic
resource "aws_security_group" "default-vpc-web" {
  name        = "default-vpc-web"
  description = "Dev VPC web"
  ingress {
    description = "Allow Port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow Port 443"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all ip and ports outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
